change read file method

--- a/resources/pylogconfig.ini
+++ b/resources/pylogconfig.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,testlog
+keys=root,testlog,servicelog
 
 [handlers]
 keys=consoleHandler,rotateFileHandler
@@ -12,14 +12,22 @@ format=[%(asctime)s][%(levelname)s][%(process)d:%(thread)d][%(filename)s:%(linen
 datefmt=%Y-%m-%d %H:%M:%S
 
 [logger_root]
-level=DEBUG
+level=ERROR
 handlers=consoleHandler,rotateFileHandler
 
 [logger_testlog]
 level=DEBUG
-handlers=consoleHandler,rotateFileHandler
+handlers=consoleHandler
 qualname=winstock.test
 propagate=0
+parent=(root)
+
+[logger_servicelog]
+level=DEBUG
+handlers=consoleHandler
+qualname=winstock.service
+propagate=0
+parent=(root)
 
 [handler_consoleHandler]
 class=StreamHandler
