--- a/resources/pylogconfig.ini
+++ b/resources/pylogconfig.ini
@@ -12,7 +12,7 @@ format=[%(asctime)s][%(levelname)s][%(process)d:%(thread)d][%(filename)s:%(linen
 datefmt=%Y-%m-%d %H:%M:%S
 
 [logger_root]
-level=ERROR
+level=DEBUG
 handlers=consoleHandler,rotateFileHandler
 
 [logger_testlog]
@@ -40,4 +40,4 @@ class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
 #test used
-args=('..//..//log//test.log', 'a', 200000, 9)
+args=('..//log//test.log', 'a', 200000, 9)
