--- a/resources/db.properties
+++ b/resources/db.properties
@@ -2,4 +2,5 @@
 username=adams
 password=12345
 db=winstock
-database_file=..//..//sqlite3//winstock.db
+#database_file=..//..//sqlite3//winstock.db
+database_file=..//sqlite3//winstock.db
