--- a/resources/pylogconfig.ini
+++ b/resources/pylogconfig.ini
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,testlog,servicelog
+keys=root, daolog, servicelog, testlog
 
 [handlers]
 keys=consoleHandler,rotateFileHandler
@@ -13,19 +13,26 @@ datefmt=%Y-%m-%d %H:%M:%S
 
 [logger_root]
 level=DEBUG
-handlers=consoleHandler,rotateFileHandler
+handlers=consoleHandler
 
 [logger_testlog]
 level=DEBUG
-handlers=consoleHandler
-qualname=winstock.test
+handlers=consoleHandler,rotateFileHandler
+qualname=test
 propagate=0
 parent=(root)
 
 [logger_servicelog]
 level=DEBUG
-handlers=consoleHandler
+handlers=consoleHandler,rotateFileHandler
 qualname=winstock.service
+propagate=0
+parent=(root)
+
+[logger_daolog]
+level=DEBUG
+handlers=consoleHandler,rotateFileHandler
+qualname=winstock.dao
 propagate=0
 parent=(root)
 
@@ -40,4 +47,4 @@ class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
 #test used
-args=('..//log//test.log', 'a', 200000, 9)
+args=('../log/test.log', 'a', 200000, 9)
